// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for gradientColor: background-base, hasHeading: false, hasDescription: false, hasControlsSlot: true, headingSize: x-large, width: extended, hasPagination: true, isInfinitePagination: false, alignHeader: start, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: start;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.pagination-container {
  display: flex;
  position: relative;
  justify-content: center;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #6B6D70;
  width: 8px;
  height: 8px;
  transition: background-color 0.4s, width 0.4s;
}
.bullet--active {
  background: #010205;
  height: 8px;
  width: 20px !important;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-base, hasHeading: false, hasDescription: false, hasControlsSlot: true, headingSize: xx-large, width: extended, hasPagination: false, isInfinitePagination: true, alignHeader: start, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: start;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-base, hasHeading: false, hasDescription: true, hasControlsSlot: true, headingSize: xx-large, width: extended, hasPagination: {"base":false,"xs":true,"s":false,"m":true,"l":false,"xl":true}, isInfinitePagination: true, alignHeader: center, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: center;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
  text-align: center !important;
  justify-self: center !important;
}
p,::slotted([slot="description"]) {
  max-width: 34.375rem !important;
  margin: clamp(8px, 0.5vw + 6px, 16px) 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide:not(.is-overflow) .splide__list {
  justify-content: center;
}
.splide:not(.is-overflow) .splide__slide:last-child {
  margin-inline-end: 0 !important;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.pagination-container {
  display: none;
  position: relative;
  justify-content: flex-start;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #6B6D70;
  width: 0px;
  height: 0px;
  transition: background-color 0.4s, width 0.4s, height 0.4s;
}
.pagination--infinite > .bullet:nth-child(-n+4) {
  width: 8px;
  height: 8px;
}
.bullet--infinite {
  width: 4px !important;
  height: 4px !important;
}
.bullet--infinite ~ .bullet {
  width: 8px;
  height: 8px;
}
.bullet--infinite ~ .bullet--infinite ~ .bullet {
  width: 0px;
  height: 0px;
}
.bullet--active {
  background: #010205;
  height: 8px;
  width: 20px !important;
}
.bullet--active ~ .bullet {
  width: 8px;
  height: 8px;
}
.bullet--active ~ .bullet--infinite ~ .bullet {
  width: 0px;
  height: 0px;
}
@media(min-width:480px) {
  .pagination-container {
    display: flex;
  }
}

@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
  .pagination-container {
    display: none;
  }
}

@media(min-width:1000px) {
  .pagination-container {
    display: flex;
  }
}

@media(min-width:1300px) {
  .pagination-container {
    display: none;
  }
}

@media(min-width:1760px) {
  .pagination-container {
    display: flex;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-base, hasHeading: true, hasDescription: false, hasControlsSlot: true, headingSize: x-large, width: basic, hasPagination: false, isInfinitePagination: true, alignHeader: start, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: start;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
}
.heading {
  max-width: 56.25rem !important;
  margin: 0 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
::slotted([slot=heading]) {
  margin: 0 !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-base, hasHeading: true, hasDescription: true, hasControlsSlot: false, headingSize: xx-large, width: basic, hasPagination: true, isInfinitePagination: false, alignHeader: start, theme: light, hasNavigation: true and alignControls: center 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
}
.heading {
  max-width: 56.25rem !important;
  margin: 0 0 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
::slotted([slot=heading]) {
  margin: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
p,::slotted([slot="description"]) {
  max-width: 34.375rem !important;
  margin: clamp(8px, 0.5vw + 6px, 16px) 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
}
.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.pagination-container {
  display: flex;
  position: relative;
  justify-content: center;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #6B6D70;
  width: 8px;
  height: 8px;
  transition: background-color 0.4s, width 0.4s;
}
.bullet--active {
  background: #010205;
  height: 8px;
  width: 20px !important;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-base, hasHeading: true, hasDescription: true, hasControlsSlot: true, headingSize: x-large, width: basic, hasPagination: true, isInfinitePagination: true, alignHeader: start, theme: dark, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: start;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #FBFCFF !important;
}
.heading {
  max-width: 56.25rem !important;
  margin: 0 0 0 !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
::slotted([slot=heading]) {
  margin: 0 !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
p,::slotted([slot="description"]) {
  max-width: 34.375rem !important;
  margin: clamp(8px, 0.5vw + 6px, 16px) 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(14,14,18,1) 20%,rgba(14,14,18,0.6) 48%,rgba(14,14,18,0.3) 68%,rgba(14,14,18,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(14,14,18,1) 20%,rgba(14,14,18,0.6) 48%,rgba(14,14,18,0.3) 68%,rgba(14,14,18,0) 100%);
}
.pagination-container {
  display: flex;
  position: relative;
  justify-content: flex-start;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #88898C;
  width: 0px;
  height: 0px;
  transition: background-color 0.4s, width 0.4s, height 0.4s;
}
.pagination--infinite > .bullet:nth-child(-n+4) {
  width: 8px;
  height: 8px;
}
.bullet--infinite {
  width: 4px !important;
  height: 4px !important;
}
.bullet--infinite ~ .bullet {
  width: 8px;
  height: 8px;
}
.bullet--infinite ~ .bullet--infinite ~ .bullet {
  width: 0px;
  height: 0px;
}
.bullet--active {
  background: #FBFCFF;
  height: 8px;
  width: 20px !important;
}
.bullet--active ~ .bullet {
  width: 8px;
  height: 8px;
}
.bullet--active ~ .bullet--infinite ~ .bullet {
  width: 0px;
  height: 0px;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-base, hasHeading: true, hasDescription: true, hasControlsSlot: true, headingSize: xx-large, width: basic, hasPagination: true, isInfinitePagination: false, alignHeader: start, theme: light, hasNavigation: false and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: start;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
}
.heading {
  max-width: 56.25rem !important;
  margin: 0 0 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
::slotted([slot=heading]) {
  margin: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
p,::slotted([slot="description"]) {
  max-width: 34.375rem !important;
  margin: clamp(8px, 0.5vw + 6px, 16px) 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/-1;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
}
.pagination-container {
  display: flex;
  position: relative;
  justify-content: center;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #6B6D70;
  width: 8px;
  height: 8px;
  transition: background-color 0.4s, width 0.4s;
}
.bullet--active {
  background: #010205;
  height: 8px;
  width: 20px !important;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-surface, hasHeading: false, hasDescription: false, hasControlsSlot: true, headingSize: x-large, width: basic, hasPagination: true, isInfinitePagination: false, alignHeader: center, theme: dark, hasNavigation: true and alignControls: start 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: start;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide:not(.is-overflow) .splide__list {
  justify-content: center;
}
.splide:not(.is-overflow) .splide__slide:last-child {
  margin-inline-end: 0 !important;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(33,34,37,1) 20%,rgba(33,34,37,0.6) 48%,rgba(33,34,37,0.3) 68%,rgba(33,34,37,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(33,34,37,1) 20%,rgba(33,34,37,0.6) 48%,rgba(33,34,37,0.3) 68%,rgba(33,34,37,0) 100%);
}
.pagination-container {
  display: flex;
  position: relative;
  justify-content: center;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #88898C;
  width: 8px;
  height: 8px;
  transition: background-color 0.4s, width 0.4s;
}
.bullet--active {
  background: #FBFCFF;
  height: 8px;
  width: 20px !important;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-surface, hasHeading: false, hasDescription: false, hasControlsSlot: true, headingSize: xx-large, width: basic, hasPagination: true, isInfinitePagination: true, alignHeader: center, theme: light, hasNavigation: true and alignControls: center 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: center;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/-1;
    justify-self: center;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide:not(.is-overflow) .splide__list {
  justify-content: center;
}
.splide:not(.is-overflow) .splide__slide:last-child {
  margin-inline-end: 0 !important;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(238,239,242,1) 20%,rgba(238,239,242,0.6) 48%,rgba(238,239,242,0.3) 68%,rgba(238,239,242,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(238,239,242,1) 20%,rgba(238,239,242,0.6) 48%,rgba(238,239,242,0.3) 68%,rgba(238,239,242,0) 100%);
}
.pagination-container {
  display: flex;
  position: relative;
  justify-content: flex-start;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #6B6D70;
  width: 0px;
  height: 0px;
  transition: background-color 0.4s, width 0.4s, height 0.4s;
}
.pagination--infinite > .bullet:nth-child(-n+4) {
  width: 8px;
  height: 8px;
}
.bullet--infinite {
  width: 4px !important;
  height: 4px !important;
}
.bullet--infinite ~ .bullet {
  width: 8px;
  height: 8px;
}
.bullet--infinite ~ .bullet--infinite ~ .bullet {
  width: 0px;
  height: 0px;
}
.bullet--active {
  background: #010205;
  height: 8px;
  width: 20px !important;
}
.bullet--active ~ .bullet {
  width: 8px;
  height: 8px;
}
.bullet--active ~ .bullet--infinite ~ .bullet {
  width: 0px;
  height: 0px;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-surface, hasHeading: false, hasDescription: true, hasControlsSlot: true, headingSize: xx-large, width: basic, hasPagination: false, isInfinitePagination: true, alignHeader: left, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: start;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
}
p,::slotted([slot="description"]) {
  max-width: 34.375rem !important;
  margin: clamp(8px, 0.5vw + 6px, 16px) 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(238,239,242,1) 20%,rgba(238,239,242,0.6) 48%,rgba(238,239,242,0.3) 68%,rgba(238,239,242,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(238,239,242,1) 20%,rgba(238,239,242,0.6) 48%,rgba(238,239,242,0.3) 68%,rgba(238,239,242,0) 100%);
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: background-surface, hasHeading: true, hasDescription: true, hasControlsSlot: true, headingSize: x-large, width: extended, hasPagination: {"base":false,"xs":true,"s":false,"m":true,"l":false,"xl":true}, isInfinitePagination: false, alignHeader: start, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: start;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
}
.heading {
  max-width: 56.25rem !important;
  margin: 0 0 0 !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
::slotted([slot=heading]) {
  margin: 0 !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
p,::slotted([slot="description"]) {
  max-width: 34.375rem !important;
  margin: clamp(8px, 0.5vw + 6px, 16px) 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.splide__track::before, .splide__track::after {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: var(--p-gradient-color-width, 33%);
}
.splide__track::before {
  left: 0;
  background: linear-gradient(to right, rgba(238,239,242,1) 20%,rgba(238,239,242,0.6) 48%,rgba(238,239,242,0.3) 68%,rgba(238,239,242,0) 100%);
}
.splide__track::after {
  right: 0;
  background: linear-gradient(to left, rgba(238,239,242,1) 20%,rgba(238,239,242,0.6) 48%,rgba(238,239,242,0.3) 68%,rgba(238,239,242,0) 100%);
}
.pagination-container {
  display: none;
  position: relative;
  justify-content: center;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #6B6D70;
  width: 8px;
  height: 8px;
  transition: background-color 0.4s, width 0.4s;
}
.bullet--active {
  background: #010205;
  height: 8px;
  width: 20px !important;
}
@media(min-width:480px) {
  .pagination-container {
    display: flex;
  }
}

@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
  .pagination-container {
    display: none;
  }
}

@media(min-width:1000px) {
  .pagination-container {
    display: flex;
  }
}

@media(min-width:1300px) {
  .pagination-container {
    display: none;
  }
}

@media(min-width:1760px) {
  .pagination-container {
    display: flex;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: none, hasHeading: true, hasDescription: false, hasControlsSlot: true, headingSize: x-large, width: extended, hasPagination: false, isInfinitePagination: false, alignHeader: center, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: center;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
  text-align: center !important;
  justify-self: center !important;
}
.heading {
  max-width: 56.25rem !important;
  margin: 0 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
::slotted([slot=heading]) {
  margin: 0 !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide:not(.is-overflow) .splide__list {
  justify-content: center;
}
.splide:not(.is-overflow) .splide__slide:last-child {
  margin-inline-end: 0 !important;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: none, hasHeading: true, hasDescription: true, hasControlsSlot: true, headingSize: x-large, width: basic, hasPagination: false, isInfinitePagination: false, alignHeader: center, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: center;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
  text-align: center !important;
  justify-self: center !important;
}
.heading {
  max-width: 56.25rem !important;
  margin: 0 0 0 !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
::slotted([slot=heading]) {
  margin: 0 !important;
  font: normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
p,::slotted([slot="description"]) {
  max-width: 34.375rem !important;
  margin: clamp(8px, 0.5vw + 6px, 16px) 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide:not(.is-overflow) .splide__list {
  justify-content: center;
}
.splide:not(.is-overflow) .splide__slide:last-child {
  margin-inline-end: 0 !important;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for gradientColor: none, hasHeading: true, hasDescription: true, hasControlsSlot: true, headingSize: xx-large, width: extended, hasPagination: true, isInfinitePagination: true, alignHeader: center, theme: light, hasNavigation: true and alignControls: auto 1`] = `
":host {
  display: flex;
  gap: clamp(16px, 1.25vw + 12px, 36px) !important;
  flex-direction: column !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="controls"] {
  display: block;
  grid-column: 1/-1;
  grid-row-start: 3;
  align-self: center;
  justify-self: center;
}
::slotted(*) {
  border-radius: var(--p-carousel-border-radius, 12px) !important;
}
.heading,p,::slotted([slot="description"]) {
  grid-column: 1/-1 !important;
  color: #010205 !important;
  text-align: center !important;
  justify-self: center !important;
}
.heading {
  max-width: 56.25rem !important;
  margin: 0 0 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
::slotted([slot=heading]) {
  margin: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
}
p,::slotted([slot="description"]) {
  max-width: 34.375rem !important;
  margin: clamp(8px, 0.5vw + 6px, 16px) 0 clamp(16px, 1.25vw + 12px, 36px) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
}
@media(min-width:760px) {
  slot[name="controls"] {
    grid-column: 1/2;
    justify-self: start;
  }
}

.header {
  display: grid;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px));
}
.nav {
  display: none;
  filter: var(--p-carousel-prev-next-filter, none);
}
.btn {
  padding: 8px;
}
.skip-link:not(:focus) {
  opacity: 0;
  pointer-events: none;
}
.splide {
  overflow: hidden;
  padding: 4px 0;
  margin: -4px 0;
}
.splide__track {
  position: relative;
  padding: 0 var(--p-carousel-px,max(22px, 10.625vw - 12px)) !important;
}
.splide__list {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  display: flex;
}
.splide__slide {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  flex-shrink: 0;
  transform: translateZ(0);
  border-radius: var(--p-carousel-border-radius, 12px);
}
.splide__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.splide:not(.is-overflow) .splide__list {
  justify-content: center;
}
.splide:not(.is-overflow) .splide__slide:last-child {
  margin-inline-end: 0 !important;
}
.splide__slide::-moz-focus-inner {
  border: 0;
}
.splide__slide:focus {
  outline: 0;
}
.splide__slide:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.splide__track--draggable {
  cursor: grab;
  user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
.pagination-container {
  display: flex;
  position: relative;
  justify-content: flex-start;
  width: calc(20px + 8px * 4 + 8px * 4);
  left: calc(50% - (calc(20px + 8px * 4 + 8px * 4)) / 2);
  overflow-x: hidden;
}
.pagination {
  display: flex;
  align-items: center;
  width: fit-content;
  height: 8px;
  gap: 8px;
  transition: transform 0.4s;
}
.bullet {
  border-radius: 4px;
  background: #6B6D70;
  width: 0px;
  height: 0px;
  transition: background-color 0.4s, width 0.4s, height 0.4s;
}
.pagination--infinite > .bullet:nth-child(-n+4) {
  width: 8px;
  height: 8px;
}
.bullet--infinite {
  width: 4px !important;
  height: 4px !important;
}
.bullet--infinite ~ .bullet {
  width: 8px;
  height: 8px;
}
.bullet--infinite ~ .bullet--infinite ~ .bullet {
  width: 0px;
  height: 0px;
}
.bullet--active {
  background: #010205;
  height: 8px;
  width: 20px !important;
}
.bullet--active ~ .bullet {
  width: 8px;
  height: 8px;
}
.bullet--active ~ .bullet--infinite ~ .bullet {
  width: 0px;
  height: 0px;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) auto;
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
    column-gap: 16px;
  }
  .nav {
    grid-row-start: 3;
    grid-column-end: -1;
    display: flex;
    gap: 4px;
    align-self: flex-start;
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}

@media(min-width:1920px) {
  .header {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1));
  }
  .splide__track {
    padding: 0 var(--p-carousel-px,calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)) !important;
  }
}

@media (pointer: coarse) {
  .pagination-container {
    width: calc(20px + 8px * 4 + 16px * 4 + 2 * 8px);
    left: calc(50% - calc(20px + 8px * 4 + 16px * 4 + 2 * 8px) / 2);
  }
  .pagination {
    height: calc(8px + 2 * 8px);
    gap: 16px;
  }
  .bullet {
    position: relative;
  }
  .bullet::before {
    content: "";
    position: absolute;
    inset: -8px;
  }
}

@media(hover:hover) {
  .bullet {
    cursor: pointer;
  }
}
"
`;
